name:           hawk
version:        0
description:    HAskell WebKit browser
homepage:       https://github.com/dylex/hawk
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018
license:        BSD3
build-type:     Custom
cabal-version:  >= 1.24
data-files:     
  config.yaml 
  hawk.js
  hawk.css 
  plain.css

source-repository head
  type: git
  location: https://github.com/dylex/hawk

custom-setup
  setup-depends: base, containers, Cabal

executable hawk
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: OverloadedLabels OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , aeson
    , blaze-html
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , hashable
    , lens
    , mtl
    , network
    , network-uri
    , postgresql-typed
    , process
    , scientific
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
    , yaml
    , haskell-gi-base
    , gi-gio
    , gi-gobject
    , gi-gdk
    , gi-gtk
    , gi-pango
    , gi-soup
    , gi-webkit2
  main-is: Main.hs
  other-modules:
    Paths_hawk
    Bind
    Config
    Cookies
    Database
    Event
    JS
    JSON
    Open
    Prompt
    Script
    Types
    UI
    Util
    URI
    URI.ListMap
    URI.PrefixMap
    URI.Domain
    URI.Expand
    URI.Hawk
