name:           hawk
version:        0
description:    HAskell WebKit browser
homepage:       https://github.com/dylex/hawk
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018
license:        BSD3
build-type:     Custom
cabal-version:  1.24
data-files:     
  config.yaml 
  hawk.js
  hawk.css 
  plain.css

source-repository head
  type: git
  location: https://github.com/dylex/hawk

custom-setup
  setup-depends: base, containers, Cabal

flag webkit2_20
  description: use webkit >= 2.20 features

executable hawk
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: OverloadedLabels OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , aeson
    , blaze-html
    , bytestring
    , containers
    , data-default
    , deque
    , directory
    , filepath
    , hashable
    , lens
    , mtl
    , network
    , network-uri
    , postgresql-typed
    , process
    , scientific
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , yaml
    , haskell-gi-base
    , gi-glib
    , gi-gio
    , gi-gobject
    , gi-gdk
    , gi-gtk
    , gi-pango
    , gi-soup
    , gi-webkit2
  main-is: Main.hs
  other-modules:
    Paths_hawk
    Bind
    Config
    Content
    ContentFilter
    Cookies
    Data.BitSet
    Data.EnumVec
    Data.ListMap
    Data.MonoidList
    Data.PrefixMap
    Database
    Domain
    Event
    Expand
    Filter
    GAttributes
    GValue
    JS
    JSON
    Open
    Prompt
    Scheme
    Script
    Types
    UI
    URI
    URLMap
    Util
  if flag(webkit2_20)
    cpp-options: -DWEBKIT2_20
    pkgconfig-depends: webkit2gtk-4.0 >= 2.20
  else
    pkgconfig-depends: webkit2gtk-4.0 >= 2.18
