name:           hawk
version:        0
description:    HAskell WebKit browser
homepage:       https://github.com/dylex/hawk
author:         Dylan Simon
maintainer:     dylan@dylex.net
copyright:      2018
license:        BSD3
build-type:     Custom
cabal-version:  1.24
data-files:     
  config.yaml 
  hawk.ts
  hawk.js
  hawk.css 
  plain.css

source-repository head
  type: git
  location: https://github.com/dylex/hawk

custom-setup
  setup-depends: base, containers, Cabal

executable hawk
  default-language: Haskell2010
  ghc-options: -Wall -g
  default-extensions: OverloadedLabels OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , aeson
    , blaze-html
    , bytestring
    , containers
    , data-default
    , deque
    , directory
    , filepath
    , hashable
    , lens
    , mtl
    , network
    , network-uri
    , postgresql-typed
    , process
    , scientific
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , yaml
    , haskell-gi-base
    , gi-glib
    , gi-gio
    , gi-gobject
    , gi-gdk4
    , gi-gtk4
    , gi-javascriptcore6
    , gi-pango
    , gi-soup3
    , gi-webkit
  main-is: Main.hs
  other-modules:
    Paths_hawk
    Bind
    Config
    Content
    ContentFilter
    Cookies
    Data.BitSet
    Data.EnumVec
    Data.ListMap
    Data.MonoidList
    Data.PrefixMap
    Database
    Domain
    Event
    Expand
    Filter
    GAttributes
    GValue
    JS
    JSON
    Open
    Prompt
    Scheme
    Script
    Types
    UI
    URI
    URLMap
    Util
  pkgconfig-depends: webkitgtk-6.0
